fix alignment of dyp stats

--- a/src/app/components/dyp/dyp-results/dyp-results.component.scss
+++ b/src/app/components/dyp/dyp-results/dyp-results.component.scss
@@ -108,11 +108,14 @@
         font-size: 0.8rem;
         line-height: 1rem;
         font-weight: bold;
+        display: inline-block;
     }
 
     &__description {
         color: $color-default-light;
         font-size: 0.8rem;
         line-height: 1rem;
+        display: inline-block;
+        margin-left: .5rem;
     }
 }
